k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment-${APP_VERSION}
  namespace: ${STAGE} # in which namespace does the resource lives
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
      version: ${APP_VERSION}
  template:   # pod template used for creating new pods
    metadata:
      labels: # labels to apply to the pods created from this template
        app: app
        version: ${APP_VERSION}
    spec:
      serviceAccountName: jfc-sa
      containers: # usually 1 container per pod
        - name: jfc-app-container
          imagePullPolicy: Always
          image: ${AWS_ACCOUNT_ID}.dkr.ecr.us-west-2.amazonaws.com/job-fit-checker/app:${APP_TAG}
          ports:
            - containerPort: 8080  # which port the container listens on internally.
