k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: ${STAGE} # in which namespace does the resource lives
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:   # pod template used for creating new pods
    metadata:
      labels: # labels to apply to the pods created from this template
        app: frontend
    spec:
      containers: # usually 1 container per pod
        - name: jfc-frontend-container
          imagePullPolicy: Always
          image: 891612549148.dkr.ecr.us-west-2.amazonaws.com/job-fit-checker/frontend:${FRONTEND_TAG}
          ports:
            - containerPort: 3000  # which port the container listens on internally.
