k8s/postprocessor-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postprocessor-deployment-${POSTPROCESSOR_VERSION}
  namespace: ${STAGE} # in which namespace does the resource lives
spec:
  replicas: 2
  selector:
    matchLabels:
      app: postprocessor
      version: ${POSTPROCESSOR_VERSION}
  template:   # pod template used for creating new pods
    metadata:
      labels: # labels to apply to the pods created from this template
        app: postprocessor
        version: ${POSTPROCESSOR_VERSION}
    spec:
      serviceAccountName: jfc-sa
      containers: # usually 1 container per pod
        - name: jfc-resumeppw-container
          imagePullPolicy: Always
          image: 891612549148.dkr.ecr.us-west-2.amazonaws.com/job-fit-checker/postprocessor:${POSTPROCESSOR_TAG}
