k8s/userservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userservice-deployment
  namespace: ${STAGE} # in which namespace does the resource lives
spec:
  replicas: 2
  selector:
    matchLabels:
      app: userservice
  template:   # pod template used for creating new pods
    metadata:
      labels: # labels to apply to the pods created from this template
        app: userservice
    spec:
      serviceAccountName: jfc-sa
      containers: # usually 1 container per pod
        - name: jfc-userservice-container
          image: ${AWS_ACCOUNT_ID}.dkr.ecr.us-west-2.amazonaws.com/job-fit-checker/app${APP_TAG}
          ports:
            - containerPort: 8080  # which port the container listens on internally.
