k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service-${FRONTEND_VERSION}
  namespace: ${STAGE}
spec:
  selector:
    app: frontend # match Pod label
    version: ${FRONTEND_VERSION}
  ports:
    - port: 80  # the port number that the Service exposes inside the cluster
      targetPort: 3000  # the port on the container (inside the Pod) that the Service forwards traffic to.
  type: ClusterIP
